Fix image overlapping username on comments

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -347,6 +347,9 @@
       p:last-child {
         margin-bottom: 0;
       }
+      p:first-child + .onebox {
+        margin-top: 2rem;
+      }
     }
   }
   .stream-item-activity {
